This CSS fix adds a scrollbar to the modal if content height is greater than resolution

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -251,3 +251,7 @@ color: #ffffff;
 	padding-right: 0;
 	padding-left: 0;
 }
+.modal-body {
+	max-height: calc(100vh - 200px);
+	overflow-y: auto;
+}
